--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,14 +1,14 @@
 <nav class="d-flex align-items-center justify-content-between">
-  <a routerLink="/" class="d-flex align-items-center">
+  <a routerLink="/" class="d-flex align-items-center justify-content-between">
     <img src="/assets/open-fabric.png" class="logo" alt="Open Fabric Logo">
     <h1>Open Fabric</h1>
   </a>
   <div class="d-flex flex-row gap-3">
     <div>
-      <a routerLink="/products">Products</a>
+      <a routerLink="/products" *ngIf="user" class="link">Products</a>
     </div>
 
-    <div *ngIf="!user" class="d-flex flex-row gap-3">
+    <div *ngIf="!user" class="d-flex flex-row gap-3 align-items-center justify-content-between link">
       <a routerLink="/register">Sign Up</a>
       <a routerLink="/login">Sign In</a>
     </div>
