--- a/frontend/src/app/add-item/add-item.component.html
+++ b/frontend/src/app/add-item/add-item.component.html
@@ -8,15 +8,6 @@
       </div>
     </div>
   </label>
-  <label for="image">
-    <input type="file" id="image" formControlName="image" accept="image/png" class="form-control form-control-sm"
-      [ngClass]="{'is-invalid':image.invalid && (image.dirty || image.touched)}" />
-    <div *ngIf="image.invalid && (image.dirty || image.touched)" class="invalid-feedback">
-      <div *ngIf="image.errors?.['required']">
-        Please select an image
-      </div>
-    </div>
-  </label>
 
   <label for="brand">
     <input id="brand" formControlName="brand" placeholder="Enter Product brand" class="form-control form-control-sm"
@@ -43,7 +34,7 @@
     <button class="btn btn-primary">Add
       product</button>
   </div>
-  <div *ngIf="submitted">
-    <h4 class="text-danger fs-6 align-self-center">Tutorial was submitted successfully!</h4>
+  <div *ngIf="submitted" class="align-self-center">
+    <h4 class="text-danger align-self-center">Tutorial was submitted successfully!</h4>
   </div>
 </form>
