--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -3,16 +3,16 @@
     <div class="mb-3">
       <label class="form-label">Username</label>
       <input type="text" formControlName="username" class="form-control"
-        [ngClass]="{ 'is-invalid': submitted && f['username'].errors }" />
-      <div *ngIf="submitted && f['username'].errors" class="invalid-feedback">
+        [ngClass]="{ 'is-invalid': submitted && f['username'].errors }" placeholder="Enter your username" />
+      <div *ngIf="!submitted && f['username'].errors" class="invalid-feedback">
         <div *ngIf="f['username'].errors">Username is required</div>
       </div>
     </div>
     <div class="mb-3">
       <label class="form-label">Password</label>
       <input type="password" formControlName="password" class="form-control"
-        [ngClass]="{ 'is-invalid': submitted && f['password'].errors }" />
-      <div *ngIf="submitted && f['password'].errors" class="invalid-feedback">
+        [ngClass]="{ 'is-invalid': submitted && f['password'].errors }" placeholder="Enter your password" />
+      <div *ngIf="!submitted && f['password'].errors" class="invalid-feedback">
         <div *ngIf="f['password'].errors">Password is required</div>
       </div>
     </div>
@@ -21,7 +21,6 @@
         <span *ngIf="loading" class="spinner-border spinner-border-sm me-1"></span>
         Login
       </button>
-      <a routerLink="../register" class="btn btn-link">Register</a>
     </div>
   </form>
 </div>
