--- a/frontend/src/app/product-details/product-details.component.html
+++ b/frontend/src/app/product-details/product-details.component.html
@@ -1,12 +1,16 @@
 <section *ngIf="product" class="d-flex justify-content-center align-items-center">
-  <img [src]="product.image" alt="">
+  <!-- <img [src]="product.image" alt=""> -->
   <div>
-    <h2 class="fs-1">{{product.name | uppercase}}</h2>
+    <div class="d-flex align-items-start justify-content-center gap-3">
+      <h2 class="fs-1">{{product.name | uppercase}}</h2>
+      <div class="icon-wrapper">
+        <i class="bi bi-pencil mt-2 icon" data-bs-toggle="modal" data-bs-target="#editModal"></i>
+      </div>
+    </div>
     <div class="fs-2">{{product.brand}}</div>
     <div class="fs-5">
       ${{product.price}}.00
     </div>
-    <button data-bs-toggle="modal" data-bs-target="#editModal" class="btn btn-outline-primary btn">Edit Product</button>
   </div>
 
 </section>
