--- a/frontend/src/app/product-details/product-details.component.scss
+++ b/frontend/src/app/product-details/product-details.component.scss
@@ -1,8 +1,11 @@
 section {
+  margin-top: 150px;
+
   @media screen and (max-width: 768px) {
     flex-direction: column;
     align-items: center;
     padding: 0 14px;
+    margin-top: 40px;
   }
 
   img {
