--- a/frontend/src/app/register/register.component.html
+++ b/frontend/src/app/register/register.component.html
@@ -3,15 +3,15 @@
     <div class="mb-3">
       <label class="form-label">Username</label>
       <input type="text" formControlName="username" class="form-control"
-        [ngClass]="{ 'is-invalid': submitted && f['username'].errors }" />
-      <div *ngIf="submitted && f['username'].errors" class="invalid-feedback">
+        [ngClass]="{ 'is-invalid': submitted && f['username'].errors }" placeholder="Enter your username" />
+      <div *ngIf="submitted && f['username'].errors || f['username'].touched" class="invalid-feedback">
         <div *ngIf="f['username'].errors">Username is required</div>
       </div>
     </div>
     <div class="mb-3">
       <label class="form-label">Email</label>
       <input type="text" formControlName="email" class="form-control"
-        [ngClass]="{ 'is-invalid': submitted && f['email'].errors }" />
+        [ngClass]="{ 'is-invalid': submitted && f['email'].errors }" placeholder="Enter your email" />
       <div *ngIf="submitted && f['email'].errors" class="invalid-feedback">
         <div *ngIf="f['email'].errors">email is required</div>
       </div>
@@ -19,7 +19,7 @@
     <div class="mb-3">
       <label class="form-label">Password</label>
       <input type="password" formControlName="password" class="form-control"
-        [ngClass]="{ 'is-invalid': submitted && f['password'].errors }" />
+        [ngClass]="{ 'is-invalid': submitted && f['password'].errors }" placeholder="Enter your password" />
       <div *ngIf="submitted && f['password'].errors" class="invalid-feedback">
         <div *ngIf="f['password'].errors">Password is required</div>
       </div>
@@ -29,7 +29,6 @@
         <span *ngIf="loading" class="spinner-border spinner-border-sm me-1"></span>
         Login
       </button>
-      <a routerLink="../register" class="btn btn-link">Register</a>
     </div>
   </form>
 </div>
